--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -4,26 +4,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, Dear ImGui with SDL2]
-Pos=424,90
-Size=582,563
+Pos=229,12
+Size=853,637
 Collapsed=0
 DockId=0x00000002,2
 
 [Window][My Window]
-Pos=424,90
-Size=582,563
+Pos=229,12
+Size=853,637
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Logger Output]
-Pos=424,90
-Size=582,563
+Pos=229,12
+Size=853,637
 Collapsed=0
 DockId=0x00000002,3
 
 [Window][Dear ImGui Demo]
-Pos=424,90
-Size=582,563
+Pos=229,12
+Size=853,637
 Collapsed=0
 DockId=0x00000002,1
 
@@ -152,5 +152,5 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockNode  ID=0x00000002 Pos=424,90 Size=582,563 Selected=0x086A1005
+DockNode  ID=0x00000002 Pos=229,12 Size=853,637 Selected=0x85FD66EC
 
