--- a/FatedQuest.Libraries/BinaryOperations/BinaryOperations.vcxproj
+++ b/FatedQuest.Libraries/BinaryOperations/BinaryOperations.vcxproj
@@ -231,6 +231,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Logger\Logger.vcxproj">
+      <Project>{40283b7b-524e-4753-9617-ff1da95cd9d0}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\StandardOperations\StandardOperations.vcxproj">
       <Project>{1ae9e9be-b55d-4c31-8a6f-7f3220e8d538}</Project>
     </ProjectReference>
