--- a/FatedQuest.Libraries/StandardObjectsTests/StandardObjectsTests.vcxproj
+++ b/FatedQuest.Libraries/StandardObjectsTests/StandardObjectsTests.vcxproj
@@ -161,6 +161,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Logger\Logger.vcxproj">
+      <Project>{40283b7b-524e-4753-9617-ff1da95cd9d0}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\StandardObjects\StandardObjects.vcxproj">
       <Project>{3f3ccd80-0310-46b9-a963-285eac938cd6}</Project>
     </ProjectReference>
