Fixed an issue in the packager to ensure it can delete the directory given.

--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -152,5 +152,5 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockNode  ID=0x00000002 Pos=229,12 Size=853,637 Selected=0x85FD66EC
+DockNode  ID=0x00000002 Pos=229,12 Size=853,637 Selected=0x4A68580B
 
