--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -4,28 +4,28 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, Dear ImGui with SDL2]
-Pos=229,12
+Pos=112,41
 Size=853,637
 Collapsed=0
-DockId=0x00000002,2
+DockId=0x00000002,1
 
 [Window][My Window]
-Pos=229,12
+Pos=112,41
 Size=853,637
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Logger Output]
-Pos=229,12
+Pos=112,41
+Size=853,637
+Collapsed=0
+DockId=0x00000002,2
+
+[Window][Dear ImGui Demo]
+Pos=112,41
 Size=853,637
 Collapsed=0
 DockId=0x00000002,3
-
-[Window][Dear ImGui Demo]
-Pos=229,12
-Size=853,637
-Collapsed=0
-DockId=0x00000002,1
 
 [Window][Delete?]
 Pos=434,312
@@ -152,5 +152,5 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockNode  ID=0x00000002 Pos=229,12 Size=853,637 Selected=0x4A68580B
+DockNode  ID=0x00000002 Pos=112,41 Size=853,637 Selected=0x5E5F7166
 
