[#90] Added Movement to the Game to Test Play/Stop

--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -4,28 +4,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, Dear ImGui with SDL2]
-Pos=112,41
-Size=853,637
+Pos=9,3
+Size=905,700
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][My Window]
-Pos=112,41
-Size=853,637
+Pos=9,3
+Size=905,700
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Logger Output]
-Pos=112,41
-Size=853,637
+Pos=922,32
+Size=358,637
 Collapsed=0
-DockId=0x00000002,2
 
 [Window][Dear ImGui Demo]
-Pos=112,41
-Size=853,637
+Pos=9,3
+Size=905,700
 Collapsed=0
-DockId=0x00000002,3
+DockId=0x00000002,2
 
 [Window][Delete?]
 Pos=434,312
@@ -152,5 +151,5 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockNode  ID=0x00000002 Pos=112,41 Size=853,637 Selected=0x5E5F7166
+DockNode  ID=0x00000002 Pos=9,3 Size=905,700 Selected=0x85FD66EC
 
