--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -4,27 +4,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, Dear ImGui with SDL2]
-Pos=9,3
+Pos=338,205
 Size=905,700
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][My Window]
-Pos=9,3
+Pos=338,205
 Size=905,700
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Logger Output]
-Pos=922,32
-Size=358,637
+Pos=819,339
+Size=400,200
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=9,3
-Size=905,700
+Pos=78,75
+Size=905,648
 Collapsed=0
-DockId=0x00000002,2
 
 [Window][Delete?]
 Pos=434,312
@@ -76,6 +75,20 @@ Pos=248,113
 Size=793,563
 Collapsed=0
 DockId=0x00000002,2
+
+[Window][Example: Assets Browser]
+Pos=60,60
+Size=800,480
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=633,450
+Collapsed=0
+
+[Window][Example: Property editor/##tree_37EC733C]
+IsChild=1
+Size=300,415
 
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
@@ -150,6 +163,15 @@ Column 3  Width=68
 Column 4  Weight=1.0000
 Column 5  Width=-1
 
+[Table][0xB6880529,2]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2048C668,2]
+RefScale=13
+Column 0  Width=55
+Column 1  Weight=2.0000
+
 [Docking][Data]
-DockNode  ID=0x00000002 Pos=9,3 Size=905,700 Selected=0x85FD66EC
+DockNode  ID=0x00000002 Pos=338,205 Size=905,700 Selected=0x4A68580B
 
