[#92] Made entire window dockable

--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -4,26 +4,28 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, Dear ImGui with SDL2]
-Pos=338,205
-Size=905,700
+Pos=0,19
+Size=742,498
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000001,1
 
 [Window][My Window]
-Pos=338,205
-Size=905,700
+Pos=0,19
+Size=742,498
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Logger Output]
+Pos=0,519
+Size=742,201
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][Logger Output]
-Pos=819,339
-Size=400,200
-Collapsed=0
-
 [Window][Dear ImGui Demo]
-Pos=78,75
-Size=905,648
+Pos=744,19
+Size=536,701
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Delete?]
 Pos=434,312
@@ -74,7 +76,7 @@ Collapsed=0
 Pos=248,113
 Size=793,563
 Collapsed=0
-DockId=0x00000002,2
+DockId=0x00000001,2
 
 [Window][Example: Assets Browser]
 Pos=60,60
@@ -89,6 +91,11 @@ Collapsed=0
 [Window][Example: Property editor/##tree_37EC733C]
 IsChild=1
 Size=300,415
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
 
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
@@ -173,5 +180,9 @@ Column 0  Width=55
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockNode  ID=0x00000002 Pos=338,205 Size=905,700 Selected=0x4A68580B
+DockSpace     ID=0xC0DFADC4 Window=0xD0388BC8 Pos=0,19 Size=1280,701 Split=X Selected=0x4A68580B
+  DockNode    ID=0x00000003 Parent=0xC0DFADC4 SizeRef=742,701 Split=Y
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1280,498 CentralNode=1 Selected=0x4A68580B
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1280,201 Selected=0x086A1005
+  DockNode    ID=0x00000004 Parent=0xC0DFADC4 SizeRef=536,701 Selected=0x5E5F7166
 
