[#92] Added example windows for a layout

--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -7,25 +7,25 @@ Collapsed=0
 Pos=0,19
 Size=742,498
 Collapsed=0
-DockId=0x00000001,1
+DockId=0xC0DFADC4,1
 
 [Window][My Window]
-Pos=0,19
-Size=742,498
+Pos=312,19
+Size=578,498
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000006,0
 
 [Window][Logger Output]
 Pos=0,519
-Size=742,201
+Size=890,201
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-Pos=744,19
-Size=536,701
+Pos=0,519
+Size=890,201
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,1
 
 [Window][Delete?]
 Pos=434,312
@@ -76,7 +76,7 @@ Collapsed=0
 Pos=248,113
 Size=793,563
 Collapsed=0
-DockId=0x00000001,2
+DockId=0xC0DFADC4,2
 
 [Window][Example: Assets Browser]
 Pos=60,60
@@ -93,9 +93,25 @@ IsChild=1
 Size=300,415
 
 [Window][DockSpace Demo]
+Size=1280,720
+Collapsed=0
+
+[Window][DockSpace]
 Pos=0,0
 Size=1280,720
 Collapsed=0
+
+[Window][Scene Hierarchy]
+Pos=0,19
+Size=310,498
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Inspector Window]
+Pos=892,19
+Size=388,701
+Collapsed=0
+DockId=0x00000004,0
 
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
@@ -180,9 +196,12 @@ Column 0  Width=55
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace     ID=0xC0DFADC4 Window=0xD0388BC8 Pos=0,19 Size=1280,701 Split=X Selected=0x4A68580B
-  DockNode    ID=0x00000003 Parent=0xC0DFADC4 SizeRef=742,701 Split=Y
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1280,498 CentralNode=1 Selected=0x4A68580B
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1280,201 Selected=0x086A1005
-  DockNode    ID=0x00000004 Parent=0xC0DFADC4 SizeRef=536,701 Selected=0x5E5F7166
+DockSpace       ID=0x14621557 Window=0x3DA2F1DE Pos=0,19 Size=1280,701 Split=X
+  DockNode      ID=0x00000003 Parent=0x14621557 SizeRef=890,701 Split=Y
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1280,498 Split=X Selected=0x85FD66EC
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=310,498 Selected=0xB8729153
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=578,498 CentralNode=1 Selected=0x85FD66EC
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1280,201 Selected=0x086A1005
+  DockNode      ID=0x00000004 Parent=0x14621557 SizeRef=388,701 Selected=0xB576AE73
+DockSpace       ID=0xC0DFADC4 Pos=0,19 Size=1280,701 CentralNode=1 Selected=0x4A68580B
 
