[#95] Created a class registration class for recreation from string
And moved XML classes to embed them into components without the need for Rapid in external libraries such as games/tools.

--- a/FatedQuest.Libraries/ClassTypes/ClassTypes.vcxproj.filters
+++ b/FatedQuest.Libraries/ClassTypes/ClassTypes.vcxproj.filters
@@ -21,22 +21,7 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RapidXML.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="RapidXMLAttribute.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="RapidXMLDocument.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="RapidXMLNode.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="AllReferences.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="FatedQuestLibraries.h">
+    <ClInclude Include="ClassTypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -44,23 +29,5 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="RapidXMLAttribute.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="RapidXMLDocument.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="RapidXMLNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="XMLAttribute.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="XMLNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
 </Project>
