--- a/FatedQuest.Libraries/SuperXMLDocument/SuperXMLDocument.vcxproj.filters
+++ b/FatedQuest.Libraries/SuperXMLDocument/SuperXMLDocument.vcxproj.filters
@@ -21,22 +21,16 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RapidXML.h">
+    <ClInclude Include="SuperXMLDocument.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RapidXMLAttribute.h">
+    <ClInclude Include="XMLAttribute.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RapidXMLDocument.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="RapidXMLNode.h">
+    <ClInclude Include="XMLNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AllReferences.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="FatedQuestLibraries.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -44,23 +38,5 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="RapidXMLAttribute.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="RapidXMLDocument.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="RapidXMLNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="XMLAttribute.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="XMLNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
 </Project>
