--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -207,7 +207,7 @@
     <ProjectReference Include="..\..\FatedQuest.Libraries\StandardOperations\StandardOperations.vcxproj">
       <Project>{1ae9e9be-b55d-4c31-8a6f-7f3220e8d538}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\FatedQuest.Libraries\SuperXMLDocument\SuperXMLDocument.vcxproj">
+    <ProjectReference Include="..\..\FatedQuest.Libraries\StoredDocument\StoredDocument.vcxproj">
       <Project>{f54f462a-6a7e-4273-8f91-9098242ae380}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\FatedQuest.Libraries\XmlDocument\XmlDocument.vcxproj">
